--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "uvicorn>=0.30.6",
     "pillow>=10.4.0",
     "python-multipart>=0.0.9",
+    "jinja2>=3.1.4",
 ]
 readme = "README.md"
 requires-python = ">= 3.8"
